Add Google API credentials to .env file

--- a/.env
+++ b/.env
@@ -5,3 +5,10 @@ VITE_SUPABASE_URL="https://blhztdikukgwuhkhootf.supabase.co"
 # Spotify Details
 VITE_CLIENT_ID="a0b995b828d84555a8d9ed270780f395"
 VITE_CLIENT_SECRTET="b683dc8e120c478d93c1d782e32f4413"
+
+# Google Details
+VITE_PROJECT_NUMBER="697125151166"
+VITE_PROJECT_ID="high-comfort-450023-d1"
+VITE_SERVICE_ACCOUNT="mo-grid@high-comfort-450023-d1.iam.gserviceaccount.com"
+VITE_OAUTH_2.0_CLIENT_ID="697125151166-avm6brcvo0s1vtsm48hkt4ou8d80bouo.apps.googleusercontent.com"
+VITE_API_KEY="AIzaSyCHFaP8TG-DttXhcpjiOoRLDlcwSdiSQZU"
